--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+        /* animation try */
+    transform-origin: 30% 0%;
+    animation: drop2 2s ease forwards,
+               swing2 6s 2.5s ease-in-out forwards;
 }
 #heading{
     font-size: 50px;
@@ -71,6 +75,43 @@ body{
     font-weight: bold;
     text-align:center;
     color:rgb(255, 0, 98);
+    transform-origin: 30% 0%;
+    animation: drop 2s ease forwards,
+               swing 3s 3s ease-in-out forwards;
+}
+@keyframes drop {
+    0%{transform: translateY(-100px);}
+    50%{transform: translateY(5px);}
+    100%{transform: translateY(0px);}
+}
+@keyframes swing {
+    0%{transform: rotateZ(0deg)}
+    /* 50%{transform: rotateZ(75deg)} */
+    40%{transform: rotateZ(25deg)}
+    60%{
+        transform-origin: 80% 0%;
+        transform: rotateZ(75deg)
+    }
+    /* 70%{transform: rotateZ(100deg)}
+    75%{transform: rotateZ(90deg)} */
+    100%{transform: rotateZ(0deg)}
+}
+@keyframes drop2 {
+    0%{transform: translateY(-900px);}
+    50%{transform: translateY(5px);}
+    100%{transform: translateY(0px);}
+}
+@keyframes swing2 {
+    0%{transform: rotateZ(0deg)}
+    /* 50%{transform: rotateZ(75deg)} */
+    30%{transform: rotateZ(25deg)}
+    70%{
+        transform-origin: 50% 0%;
+        transform: rotateZ(-35deg)
+    }
+    /* 70%{transform: rotateZ(100deg)}
+    75%{transform: rotateZ(90deg)} */
+    100%{transform: rotateZ(0deg)}
 }
 #heading{
     font-family: 'Courier New', Courier, monospace;
